# ftb-os-proj

./: .clang-format  CMakeLists.txt  README.md
doc/: how-machine-start.md  how-uart-works.md  progress.md
kernel/: .gitignore  CMakeLists.txt  Makefile  Ref-Makefile  kernel.ld
kernel/csrc/: main.c  riscv.h  start.c  types.h
kernel/csrc/define/: macro_builtin.h  param.h  riscv.h  types.h
kernel/csrc/device/: uart.c  uart.h
kernel/csrc/fs/: file.h
kernel/csrc/lib/: lib.c  lib.h  macro_builtin.h
kernel/csrc/lock/: sleeplock.c  sleeplock.h  spinlock.c  spinlock.h
kernel/csrc/mem/: kernel_mem.c  kernel_mem.h  memlayout.h  vm.c  vm.h
kernel/csrc/proc/: proc.c  proc.h  swtch.h
kernel/csrc/trap/: trap.h
kernel/ssrc/: swtch.S  trampoline.S
user/: xv6-user-fs.img
